Added API to fetch Group users
