# src/main/java/com/saibaba/saibabaparayana/controller/GroupApiController.java
@@ -2,12 +2,11 @@ package com.saibaba.saibabaparayana.controller;
 
 import com.saibaba.api.GroupsApi;
 import com.saibaba.model.GroupResponse;
+import com.saibaba.model.GroupUserResponse;
+import com.saibaba.saibabaparayana.service.GroupAssignedUsersApiService;
 import com.saibaba.saibabaparayana.service.GroupsApiService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
@@ -18,9 +17,16 @@ public class GroupApiController implements GroupsApi {
 
     @Autowired
     private GroupsApiService groupsApiService;
+    @Autowired
+    private GroupAssignedUsersApiService groupAssignedUsersApiService;
     @Override
     public ResponseEntity<List<GroupResponse>> fetchGroups() {
         List<GroupResponse> groupResponseList=groupsApiService.fetchGroups();
         return  ResponseEntity.of(Optional.ofNullable(groupResponseList));
+    }
+
+    @Override
+    public ResponseEntity<List<GroupUserResponse>> fetchGroupUsers(Long groupId) {
+        return ResponseEntity.of(Optional.ofNullable(groupAssignedUsersApiService.fetchGroupUsers(groupId)));
     }
 }
